fix: attempt six to fix landing page content overflowing out of the video background

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,8 @@ body {
 
 .landing-page-content {
   z-index: 2;
+  position: fixed;
+  top: 70%;
 }
 
 .landing-page-title {
